related to c8b9d0b and #1441 fixing icon color isue in dark mode

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -223,6 +223,7 @@ TABLE.languages TR TD { padding: 7px 20px; }
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  color: #848484;
 }
 
 .albumActions a span, .albumActions span span{
